; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/mvsas/extr_mv_sas.c_mvs_find_dev_by_reg_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/mvsas/extr_mv_sas.c_mvs_find_dev_by_reg_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mvs_device = type { i64 }
%struct.mvs_info = type { %struct.mvs_device* }

@MVS_MAX_DEVICES = common dso_local global i64 0, align 8
@MVS_ID_NOT_MAPPED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.mvs_device* @mvs_find_dev_by_reg_set(%struct.mvs_info* %0, i64 %1) #0 {
  %3 = alloca %struct.mvs_device*, align 8
  %4 = alloca %struct.mvs_info*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.mvs_info* %0, %struct.mvs_info** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 0, i64* %6, align 8
  br label %7

7:                                                ; preds = %39, %2
  %8 = load i64, i64* %6, align 8
  %9 = load i64, i64* @MVS_MAX_DEVICES, align 8
  %10 = icmp ult i64 %8, %9
  br i1 %10, label %11, label %42

11:                                               ; preds = %7
  %12 = load %struct.mvs_info*, %struct.mvs_info** %4, align 8
  %13 = getelementptr inbounds %struct.mvs_info, %struct.mvs_info* %12, i32 0, i32 0
  %14 = load %struct.mvs_device*, %struct.mvs_device** %13, align 8
  %15 = load i64, i64* %6, align 8
  %16 = getelementptr inbounds %struct.mvs_device, %struct.mvs_device* %14, i64 %15
  %17 = getelementptr inbounds %struct.mvs_device, %struct.mvs_device* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @MVS_ID_NOT_MAPPED, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %11
  br label %39

22:                                               ; preds = %11
  %23 = load %struct.mvs_info*, %struct.mvs_info** %4, align 8
  %24 = getelementptr inbounds %struct.mvs_info, %struct.mvs_info* %23, i32 0, i32 0
  %25 = load %struct.mvs_device*, %struct.mvs_device** %24, align 8
  %26 = load i64, i64* %6, align 8
  %27 = getelementptr inbounds %struct.mvs_device, %struct.mvs_device* %25, i64 %26
  %28 = getelementptr inbounds %struct.mvs_device, %struct.mvs_device* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* %5, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %38

32:                                               ; preds = %22
  %33 = load %struct.mvs_info*, %struct.mvs_info** %4, align 8
  %34 = getelementptr inbounds %struct.mvs_info, %struct.mvs_info* %33, i32 0, i32 0
  %35 = load %struct.mvs_device*, %struct.mvs_device** %34, align 8
  %36 = load i64, i64* %6, align 8
  %37 = getelementptr inbounds %struct.mvs_device, %struct.mvs_device* %35, i64 %36
  store %struct.mvs_device* %37, %struct.mvs_device** %3, align 8
  br label %43

38:                                               ; preds = %22
  br label %39

39:                                               ; preds = %38, %21
  %40 = load i64, i64* %6, align 8
  %41 = add i64 %40, 1
  store i64 %41, i64* %6, align 8
  br label %7

42:                                               ; preds = %7
  store %struct.mvs_device* null, %struct.mvs_device** %3, align 8
  br label %43

43:                                               ; preds = %42, %32
  %44 = load %struct.mvs_device*, %struct.mvs_device** %3, align 8
  ret %struct.mvs_device* %44
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
